@@ -11,6 +11,7 @@ version 5.4.0 2015/12/?
 o Add Nehan::Document.
 o Add new callback 'onPage'.
 o Refine whole structure.
+! Nehan.createEngine, Nehan.setup, Nehan.PageStream are removed.
 
 version 5.3.4 2015/10/26
 ========================
